--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
+    "next-themes": "^0.4.4",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.1",
